      support the new UserAuthenticationRequired and AllowWeakRSAKey options.
    * Deprecates the RSASSASigner constructors with the boolean argument for
      accepting weak RSA keys.
    * Updates JWSObject to support JWSSigners which throw an
      ActionRequiredForJWSCompletionException.

version 9.4.1 (2021-01-08)
    * Makes DefaultJWKSetCache.put NPE safe in concurrent scenarios (iss #392).

version 9.4.2 (2021-01-28)
    * Adds quick check in ECDSAVerifier to reject ESxxx signatures which length
      doesn't match the expected for the ESxxx algorithm (iss #399).
    * Marks shaded net.minidev:json-smart:1.3.1 as optional (iss #397).

version 9.5 (2021-02-01)
    * Adds JWKSet.toString(boolean) to return a JSON string representation of
      the JWK set with boolean parameter to control inclusion of non-public
      keys.

version 9.6 (2021-02-20)
    * Adds optional org.bouncycastle:bc-fips:[1.0.2,2.0.0) dependency as a FIPS
      140-2, Level 1 compliant JCA provider.
    * Updates RSASSASigner and RSASSAVerifier to support PS256, PS384 and PS512
      with the BouncyCastle FIPS JCA provider using the alternative JCA
      "SHA256withRSAandMGF1", "SHA384withRSAandMGF1" and "SHA512withRSAandMGF1"
      names (iss #403).
    * New BouncyCastleFIPSProviderSingleton class.
    * Updates JCASupport.isSupported(JWSAlgorithm, Provider) for the
      alternative JCA "SHA256withRSAandMGF1", "SHA384withRSAandMGF1" and
      "SHA512withRSAandMGF1" names to "RSASSA-PSS".

version 9.6.1 (2021-02-22)
    * Fixes new RSASSASigner(RSAKey) conversion to PrivateKey (iss #404).

version 9.7 (2021-02-22)
    * Adds JWTClaimsSet.toPayload() convenience method.

version 9.8 (2021-04-03)
    * Adds new package com.nimbusds.jose.mint with a JWS minter framework.

version 9.8.1 (2021-04-06)
    * Bumps JSON Smart to 1.3.2.
    * Cleans up / refactors code and tests.

version 9.9 (2021-04-26)
    * Bumps JSON Smart to 1.3.3.